--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<?php
-require_once 'vendor/autoload.php';
-?>
-
 <!DOCTYPE html>
 <html lang="es">
 
@@ -9,21 +5,25 @@ require_once 'vendor/autoload.php';
 	<base href="" />
 	<title>Agenda y Gestión de Barbería | Nicatech - La única plataforma en Uruguay</title>
 	<meta charset="utf-8" />
-	<meta name="description" content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
-	<meta name="keywords" content="Nicatech, barbería, gestión, administración, agenda online, clientes, citas, servicios, Uruguay" />
+	<meta name="description"
+		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
+	<meta name="keywords"
+		content="Nicatech, barbería, gestión, administración, agenda online, clientes, citas, servicios, Uruguay" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta property="og:locale" content="es_ES" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Agenda y Gestión de Barbería | Nicatech - La única plataforma en Uruguay" />
-	<meta property="og:description" content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
-	<meta property="og:url" content="https://nicatech.uy/panel" />
+	<meta property="og:description"
+		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
+	<meta property="og:url" content="https://nicatech.uy/" />
 	<meta property="og:site_name" content="Nicatech" />
 	<meta property="og:image" content="https://nicatech.uy/assets/media/logos/logo.png" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:title" content="Agenda y Gestión de Barbería | Nicatech - La única plataforma en Uruguay" />
-	<meta name="twitter:description" content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
+	<meta name="twitter:description"
+		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
 	<meta name="twitter:image" content="https://nicatech.uy/assets/media/logos/logo.png" />
-	<link rel="canonical" href="https://nicatech.uy/panel" />
+	<link rel="canonical" href="https://nicatech.uy/" />
 	<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
 	<link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
@@ -83,25 +83,32 @@ require_once 'vendor/autoload.php';
 						</div>
 						<div class="fw-semibold fs-5 text-gray-500 mb-7">
 							Nuestro sitio web está en <span class="text-warning fw-bold">construcción</span>. <br>
-							Suscríbete para ser notificado y formar parte del <span class="text-success fw-bold">lanzamiento</span> <br><br>
+							Suscríbete para ser notificado y formar parte del <span
+								class="text-success fw-bold">lanzamiento</span> <br><br>
 							📅 Agenda online y gestión de tu barbería.<br>
 							💻 Clientes, citas y servicios en un solo lugar.<br>
 							🚀 La única plataforma en Uruguay.
 						</div>
-						<form class="w-md-350px mb-2 mx-auto fv-plugins-bootstrap5 fv-plugins-framework" action="#" id="kt_coming_soon_form">
+						<form class="w-md-350px mb-2 mx-auto fv-plugins-bootstrap5 fv-plugins-framework" action="#"
+							id="kt_coming_soon_form">
 							<div class="fv-row text-start fv-plugins-icon-container">
 								<div class="d-flex flex-column flex-md-row justify-content-center gap-3">
-									<input type="text" placeholder="Correo electrónico" name="email" autocomplete="off" class="form-control">
+									<input type="text" placeholder="Correo electrónico" name="email" autocomplete="off"
+										class="form-control">
 									<button class="btn btn-primary text-nowrap" id="kt_coming_soon_submit">
 										<span class="indicator-label">Notifícame</span>
-										<span class="indicator-progress">Por favor espera... <span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
+										<span class="indicator-progress">Por favor espera... <span
+												class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
 									</button>
 								</div>
-								<div class="fv-plugins-message-container fv-plugins-message-container--enabled invalid-feedback"></div>
+								<div
+									class="fv-plugins-message-container fv-plugins-message-container--enabled invalid-feedback">
+								</div>
 							</div>
 						</form>
 						<div>
-							<img src="assets/media/auth/chart-graph-dark.png" class="mw-250px mh-200px theme-dark-show" alt="">
+							<img src="assets/media/auth/chart-graph-dark.png" class="mw-250px mh-200px theme-dark-show"
+								alt="">
 						</div>
 					</div>
 				</div>
@@ -114,13 +121,14 @@ require_once 'vendor/autoload.php';
 	<script src="assets/plugins/global/plugins.bundle.js"></script>
 	<script src="assets/js/scripts.bundle.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.34/moment-timezone-with-data.min.js"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.34/moment-timezone-with-data.min.js"></script>
 	<script>
 		"use strict";
-		var KTSignupComingSoon = function() {
+		var KTSignupComingSoon = function () {
 			var e, t, o, n, i, r, a;
 			return {
-				init: function() {
+				init: function () {
 					var s, l, u;
 					e = document.querySelector("#kt_coming_soon_form"),
 						t = document.querySelector("#kt_coming_soon_submit"),
@@ -146,9 +154,9 @@ require_once 'vendor/autoload.php';
 									eleValidClass: ""
 								})
 							}
-						}), t.addEventListener("click", function(n) {
+						}), t.addEventListener("click", function (n) {
 							n.preventDefault();
-							o.validate().then(function(status) {
+							o.validate().then(function (status) {
 								if (status === 'Valid') {
 									t.setAttribute("data-kt-indicator", "on");
 									t.disabled = !0;
@@ -184,7 +192,7 @@ require_once 'vendor/autoload.php';
 													customClass: {
 														confirmButton: "btn btn-primary"
 													}
-												}).then(function(t) {
+												}).then(function (t) {
 													if (t.isConfirmed) {
 														e.querySelector('[name="email"]').value = "";
 														var o = e.getAttribute("data-kt-redirect-url");
@@ -232,7 +240,7 @@ require_once 'vendor/autoload.php';
 
 					// Contador
 					var countdownDate = new Date("Oct 15, 2024 23:59:59").getTime();
-					var x = setInterval(function() {
+					var x = setInterval(function () {
 						var now = new Date().getTime();
 						var distance = countdownDate - now;
 
@@ -257,7 +265,7 @@ require_once 'vendor/autoload.php';
 				}
 			}
 		}();
-		KTUtil.onDOMContentLoaded(function() {
+		KTUtil.onDOMContentLoaded(function () {
 			KTSignupComingSoon.init();
 		});
 	</script>
