--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
 	<meta property="og:url" content="https://nicatech.uy/" />
 	<meta property="og:site_name" content="Nicatech" />
-	<meta property="og:image" content="https://nicatech.uy/assets/media/logos/logo.png" />
+	<meta property="og:image" content="https://nicatech.uy/assets/media/logos/nicatech-logo.png" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:title" content="Agenda y Gestión de Barbería | Nicatech - La única plataforma en Uruguay" />
 	<meta name="twitter:description"
 		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
-	<meta name="twitter:image" content="https://nicatech.uy/assets/media/logos/logo.png" />
+	<meta name="twitter:image" content="https://nicatech.uy/assets/media/logos/nicatech-logo.png" />
 	<link rel="canonical" href="https://nicatech.uy/" />
-	<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
+	<link rel="shortcut icon" href="assets/media/logos/logo-simbolo.png" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
 	<link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
 	<link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
@@ -85,9 +85,10 @@
 							Nuestro sitio web está en <span class="text-warning fw-bold">construcción</span>. <br>
 							Suscríbete para ser notificado y formar parte del <span
 								class="text-success fw-bold">lanzamiento</span> <br><br>
-							📅 Agenda online y gestión de tu barbería.<br>
-							💻 Clientes, citas y servicios en un solo lugar.<br>
-							🚀 La única plataforma en Uruguay.
+							📅 <span class="text-info fw-bold">Agenda online</span> y <span
+								class="text-info fw-bold">gestión de tu barbería</span>.<br>
+							💻 <span class="text-info fw-bold">Clientes, citas y servicios</span> en un solo lugar.<br>
+							🚀 La única plataforma en <span class="text-primary fw-bold">Uruguay 🇺🇾</span>.
 						</div>
 						<form class="w-md-350px mb-2 mx-auto fv-plugins-bootstrap5 fv-plugins-framework" action="#"
 							id="kt_coming_soon_form">
