--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 											t.disabled = !1;
 											if (response.ok) {
 												Swal.fire({
-													text: 'El cliente ha sido agregado correctamente.',
+													text: '¡Fuiste agregado a la lista de notificaciones! Te avisaremos cuando estemos listos. 🚀',
 													icon: "success",
 													buttonsStyling: !1,
 													confirmButtonText: "¡Ok, entendido!",
