--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
 	<meta name="twitter:image" content="https://nicatech.uy/assets/media/logos/nicatech-logo.png" />
 	<link rel="canonical" href="https://nicatech.uy/" />
-	<link rel="shortcut icon" href="assets/media/logos/logo-simbolo.png" />
+	<link rel="shortcut icon" href="assets/media/logos/nicatech-logo.png" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
 	<link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
 	<link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
@@ -108,8 +108,13 @@
 							</div>
 						</form>
 						<div>
-							<img src="assets/media/auth/chart-graph-dark.png" class="mw-250px mh-200px theme-dark-show"
-								alt="">
+							<footer class="mt-10">
+								<a href="https://www.instagram.com/nicatech.uy" target="_blank" class="text-gray-500">
+									<img src="assets/media/svg/brand-logos/instagram-2-1.svg" alt="Instagram"
+										class="h-20px me-2" />
+									Instagram
+								</a>
+							</footer>
 						</div>
 					</div>
 				</div>
