--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
 <head>
 	<base href="" />
 	<title>Agenda y Gestión de Barbería | Nicatech - La única plataforma en Uruguay</title>
+
+	<!-- Meta Charset -->
 	<meta charset="utf-8" />
+
+	<!-- Meta Descripción -->
 	<meta name="description"
 		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
+
+	<!-- Meta Keywords -->
 	<meta name="keywords"
-		content="Nicatech, barbería, gestión, administración, agenda online, clientes, citas, servicios, Uruguay" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+		content="Nicatech, barbería, gestión, administración, agenda online, clientes, citas, servicios, Uruguay, software barbería, plataforma gestión barbería" />
+
+	<!-- Meta Viewport -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+
+	<!-- Meta Robots -->
+	<meta name="robots" content="index, follow" />
+
+	<!-- Open Graph para redes sociales -->
 	<meta property="og:locale" content="es_ES" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Agenda y Gestión de Barbería | Nicatech - La única plataforma en Uruguay" />
@@ -18,21 +31,72 @@
 	<meta property="og:url" content="https://nicatech.uy/" />
 	<meta property="og:site_name" content="Nicatech" />
 	<meta property="og:image" content="https://nicatech.uy/assets/media/logos/nicatech-logo.png" />
+
+	<!-- Twitter Cards -->
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:title" content="Agenda y Gestión de Barbería | Nicatech - La única plataforma en Uruguay" />
 	<meta name="twitter:description"
 		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
 	<meta name="twitter:image" content="https://nicatech.uy/assets/media/logos/nicatech-logo.png" />
+
+	<!-- Canonical -->
 	<link rel="canonical" href="https://nicatech.uy/" />
+
+	<!-- Favicon -->
 	<link rel="shortcut icon" href="assets/media/logos/nicatech-logo.png" />
+
+	<!-- Fuentes y Estilos -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
 	<link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
 	<link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+
+	<!-- JSON-LD Schema -->
+	<script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "name": "Nicatech",
+            "url": "https://nicatech.uy",
+            "logo": "https://nicatech.uy/assets/media/logos/nicatech-logo.png",
+            "description": "📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!",
+            "address": {
+              "@type": "PostalAddress",
+              "addressCountry": "UY",
+              "addressRegion": "Montevideo",
+              "postalCode": "11600",
+              "streetAddress": "Av. 8 de Octubre 2452"
+            },
+            "contactPoint": {
+              "@type": "ContactPoint",
+              "contactType": "customer service",
+              "email": "info@nicatech.uy",
+              "telephone": "+598 94 306 272"
+            },
+            "sameAs": [
+              "https://www.facebook.com/nicatech",
+              "https://www.instagram.com/nicatech"
+            ]
+        }
+    </script>
+
+	<!-- Proteccion contra iframe -->
 	<script>
 		if (window.top != window.self) {
 			window.top.location.replace(window.self.location.href);
 		}
 	</script>
+
+	<!-- Meta Author -->
+	<meta name="author" content="Nicatech" />
+
+	<!-- Meta Theme Color -->
+	<meta name="theme-color" content="#ffffff" />
+
+	<!-- Meta Charset -->
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+	<!-- Meta Language -->
+	<meta http-equiv="Content-Language" content="es" />
 </head>
 
 <body id="kt_body" class="app-blank bgi-size-cover bgi-position-center bgi-no-repeat">
@@ -41,73 +105,75 @@
 		var themeMode = "dark";
 		document.documentElement.setAttribute("data-bs-theme", themeMode);
 	</script>
-
-	<div class="d-flex flex-column flex-root" id="kt_app_root">
-		<style>
-			body {
-				background-image: url('assets/media/auth/bg9-dark.jpg');
-			}
-		</style>
-		<div class="d-flex flex-column flex-center flex-column-fluid">
-			<div class="d-flex flex-column flex-center text-center p-10">
-				<div class="card card-flush w-lg-650px">
-					<div class="card-body py-15 py-lg-20">
-						<div class="mb-5">
-							<a>
-								<img alt="Logo" src="assets/media/logos/nicatech-logo.png" class="h-60px">
-							</a>
-						</div>
-						<h1 class="fw-bolder text-gray-900 mb-7">
-							👀 Próximamente...
-						</h1>
-						<div class="d-flex flex-center pb-10 pt-lg-5 pb-lg-12">
-							<div class="w-65px rounded-3 bg-body shadow-sm py-4 px-5 mx-3">
-								<div class="fs-2 fw-bold text-gray-800" id="kt_coming_soon_counter_days">...</div>
-								<div class="fs-7 fw-semibold text-muted">días</div>
+	<section>
+		<div class="d-flex flex-column flex-root" id="kt_app_root">
+			<style>
+				body {
+					background-image: url('assets/media/auth/bg9-dark.jpg');
+				}
+			</style>
+			<div class="d-flex flex-column flex-center flex-column-fluid">
+				<div class="d-flex flex-column flex-center text-center p-10">
+					<div class="card card-flush w-lg-650px">
+						<div class="card-body py-15 py-lg-20">
+							<div class="mb-5">
+								<a href="/">
+									<img alt="Logo" src="assets/media/logos/nicatech-logo.png" class="h-60px">
+								</a>
 							</div>
-
-							<div class="w-65px rounded-3 bg-body shadow-sm py-4 px-5 mx-3">
-								<div class="fs-2 fw-bold text-gray-800" id="kt_coming_soon_counter_hours">...</div>
-								<div class="fs-7 text-muted">hrs</div>
-							</div>
-
-							<div class="w-65px rounded-3 bg-body shadow-sm py-4 px-5 mx-3">
-								<div class="fs-2 fw-bold text-gray-800" id="kt_coming_soon_counter_minutes">...</div>
-								<div class="fs-7 text-muted">min</div>
-							</div>
-
-							<div class="w-65px rounded-3 bg-body shadow-sm py-4 px-5 mx-3">
-								<div class="fs-2 fw-bold text-gray-800" id="kt_coming_soon_counter_seconds">...</div>
-								<div class="fs-7 text-muted">seg</div>
-							</div>
-						</div>
-						<div class="fw-semibold fs-5 text-gray-500 mb-7">
-							Nuestro sitio web está en <span class="text-warning fw-bold">construcción</span>. <br>
-							Suscríbete para ser notificado y formar parte del <span
-								class="text-success fw-bold">lanzamiento</span> <br><br>
-							📅 <span class="text-info fw-bold">Agenda online</span> y <span
-								class="text-info fw-bold">gestión de tu barbería</span>.<br>
-							💻 <span class="text-info fw-bold">Clientes, citas y servicios</span> en un solo lugar.<br>
-							🚀 La única plataforma en <span class="text-primary fw-bold">Uruguay 🇺🇾</span>.
-						</div>
-						<form class="w-md-350px mb-2 mx-auto fv-plugins-bootstrap5 fv-plugins-framework" action="#"
-							id="kt_coming_soon_form">
-							<div class="fv-row text-start fv-plugins-icon-container">
-								<div class="d-flex flex-column flex-md-row justify-content-center gap-3">
-									<input type="text" placeholder="Correo electrónico" name="email" autocomplete="off"
-										class="form-control">
-									<button class="btn btn-primary text-nowrap" id="kt_coming_soon_submit">
-										<span class="indicator-label">Notifícame</span>
-										<span class="indicator-progress">Por favor espera... <span
-												class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
-									</button>
+							<h1 class="fw-bolder text-gray-900 mb-7">
+								👀 Próximamente...
+							</h1>
+							<div class="d-flex flex-center pb-10 pt-lg-5 pb-lg-12">
+								<div class="w-65px rounded-3 bg-body shadow-sm py-4 px-5 mx-3">
+									<div class="fs-2 fw-bold text-gray-800" id="kt_coming_soon_counter_days">...</div>
+									<div class="fs-7 fw-semibold text-muted">días</div>
 								</div>
-								<div
-									class="fv-plugins-message-container fv-plugins-message-container--enabled invalid-feedback">
+
+								<div class="w-65px rounded-3 bg-body shadow-sm py-4 px-5 mx-3">
+									<div class="fs-2 fw-bold text-gray-800" id="kt_coming_soon_counter_hours">...</div>
+									<div class="fs-7 text-muted">hrs</div>
+								</div>
+
+								<div class="w-65px rounded-3 bg-body shadow-sm py-4 px-5 mx-3">
+									<div class="fs-2 fw-bold text-gray-800" id="kt_coming_soon_counter_minutes">...
+									</div>
+									<div class="fs-7 text-muted">min</div>
+								</div>
+
+								<div class="w-65px rounded-3 bg-body shadow-sm py-4 px-5 mx-3">
+									<div class="fs-2 fw-bold text-gray-800" id="kt_coming_soon_counter_seconds">...
+									</div>
+									<div class="fs-7 text-muted">seg</div>
 								</div>
 							</div>
-						</form>
-						<div>
+							<div class="fw-semibold fs-5 text-gray-500 mb-7">
+								Nuestro sitio web está en <span class="text-warning fw-bold">construcción</span>. <br>
+								Suscríbete para ser notificado y formar parte del <span
+									class="text-success fw-bold">lanzamiento</span> <br><br>
+								📅 <span class="text-info fw-bold">Agenda online</span> y <span
+									class="text-info fw-bold">gestión de tu barbería</span>.<br>
+								💻 <span class="text-info fw-bold">Clientes, citas y servicios</span> en un solo
+								lugar.<br>
+								🚀 La única plataforma en <span class="text-primary fw-bold">Uruguay 🇺🇾</span>.
+							</div>
+							<form class="w-md-350px mb-2 mx-auto fv-plugins-bootstrap5 fv-plugins-framework" action="#"
+								id="kt_coming_soon_form">
+								<div class="fv-row text-start fv-plugins-icon-container">
+									<div class="d-flex flex-column flex-md-row justify-content-center gap-3">
+										<input type="email" placeholder="Correo electrónico" name="email"
+											autocomplete="off" class="form-control" required>
+										<button class="btn btn-primary text-nowrap" id="kt_coming_soon_submit">
+											<span class="indicator-label">Notifícame</span>
+											<span class="indicator-progress">Por favor espera... <span
+													class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
+										</button>
+									</div>
+									<div
+										class="fv-plugins-message-container fv-plugins-message-container--enabled invalid-feedback">
+									</div>
+								</div>
+							</form>
 							<footer class="mt-10">
 								<a href="https://www.instagram.com/nicatech.uy" target="_blank" class="text-gray-500">
 									<img src="assets/media/svg/brand-logos/instagram-2-1.svg" alt="Instagram"
@@ -120,7 +186,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>
 	<script>
 		var hostUrl = "assets/";
 	</script>
