New logo on form

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<link rel="canonical" href="https://nicatech.uy/" />
 
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="assets/media/logos/nicatech-logo.png" />
+	<link rel="shortcut icon" href="assets/media/logos/logo-simbolo.png" />
 
 	<!-- Fuentes y Estilos -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
@@ -116,8 +116,9 @@
 				<div class="d-flex flex-column flex-center text-center p-10">
 					<div class="card card-flush w-lg-650px">
 						<div class="card-body py-15 py-lg-20">
-							<div class="mb-5">
+							<div class="mb-5 d-flex align-items-center justify-content-center">
 								<a href="/">
+									<img alt="Icono" src="assets/media/logos/logo-simbolo.png" class="h-40px me-1">
 									<img alt="Logo" src="assets/media/logos/nicatech-logo.png" class="h-60px">
 								</a>
 							</div>
