--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="es">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LRMCQCT84R"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-LRMCQCT84R');
+	</script>
+
 	<base href="" />
 	<title>Agenda y Gestión de Barbería | Nicatech - La única plataforma en Uruguay</title>
 
