--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
 		gtag('config', 'G-LRMCQCT84R');
 	</script>
 
-	<base href="" />
+	<!-- Primary Meta Tags -->
 	<title>Agenda y Gestión de Barbería | Nicatech - La única plataforma en Uruguay</title>
+	<meta name="title" content="Agenda y Gestión de Barbería | Nicatech - La única plataforma en Uruguay" />
+	<meta name="description"
+		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
 
 	<!-- Meta Charset -->
 	<meta charset="utf-8" />
-
-	<!-- Meta Descripción -->
-	<meta name="description"
-		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
 
 	<!-- Meta Keywords -->
 	<meta name="keywords"
@@ -32,22 +31,21 @@
 	<!-- Meta Robots -->
 	<meta name="robots" content="index, follow" />
 
-	<!-- Open Graph para redes sociales -->
-	<meta property="og:locale" content="es_ES" />
+	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.nicatech.uy/" />
 	<meta property="og:title" content="Agenda y Gestión de Barbería | Nicatech - La única plataforma en Uruguay" />
 	<meta property="og:description"
 		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
-	<meta property="og:url" content="https://nicatech.uy/" />
-	<meta property="og:site_name" content="Nicatech" />
-	<meta property="og:image" content="https://nicatech.uy/assets/media/logos/nicatech-logo.png" />
+	<meta property="og:image" content="assets/media/banner-seo-meta.jpg" />
 
-	<!-- Twitter Cards -->
-	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:title" content="Agenda y Gestión de Barbería | Nicatech - La única plataforma en Uruguay" />
-	<meta name="twitter:description"
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image" />
+	<meta property="twitter:url" content="https://www.nicatech.uy/" />
+	<meta property="twitter:title" content="Agenda y Gestión de Barbería | Nicatech - La única plataforma en Uruguay" />
+	<meta property="twitter:description"
 		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
-	<meta name="twitter:image" content="https://nicatech.uy/assets/media/logos/nicatech-logo.png" />
+	<meta property="twitter:image" content="assets/media/banner-seo-meta.jpg" />
 
 	<!-- Canonical -->
 	<link rel="canonical" href="https://nicatech.uy/" />
@@ -89,7 +87,7 @@
         }
     </script>
 
-	<!-- Proteccion contra iframe -->
+	<!-- Protección contra iframe -->
 	<script>
 		if (window.top != window.self) {
 			window.top.location.replace(window.self.location.href);
@@ -107,6 +105,20 @@
 
 	<!-- Meta Language -->
 	<meta http-equiv="Content-Language" content="es" />
+
+	<!-- Additional SEO Meta Tags -->
+	<meta name="rating" content="general" />
+	<meta name="distribution" content="global" />
+	<meta name="revisit-after" content="7 days" />
+	<meta name="expires" content="never" />
+	<meta name="coverage" content="worldwide" />
+	<meta name="target" content="all" />
+	<meta name="HandheldFriendly" content="true" />
+	<meta name="MobileOptimized" content="320" />
+	<meta name="format-detection" content="telephone=no" />
+	<meta name="msapplication-TileColor" content="#ffffff" />
+	<meta name="msapplication-TileImage" content="assets/media/logos/logo-simbolo.png" />
+	<meta name="application-name" content="Nicatech" />
 </head>
 
 <body id="kt_body" class="app-blank bgi-size-cover bgi-position-center bgi-no-repeat">
