--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 	</script>
 
 	<!-- Primary Meta Tags -->
-	<title>Agenda y Gestión de Barbería | Nicatech - La única plataforma en Uruguay</title>
-	<meta name="title" content="Agenda y Gestión de Barbería | Nicatech - La única plataforma en Uruguay" />
+	<title>Agenda y Gestión de Barbería | Nicatech - Plataforma en Uruguay</title>
+	<meta name="title" content="Agenda y Gestión de Barbería | Nicatech - Plataforma en Uruguay" />
 	<meta name="description"
-		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
+		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 Plataforma única en Uruguay. ¡Empezá gratis!" />
 
 	<!-- Meta Charset -->
 	<meta charset="utf-8" />
 
 	<!-- Meta Keywords -->
 	<meta name="keywords"
-		content="Nicatech, barbería, gestión, administración, agenda online, clientes, citas, servicios, Uruguay, software barbería, plataforma gestión barbería" />
+		content="Nicatech, software de barbería, gestión barbería, agenda digital, clientes, citas, servicios, Uruguay, plataforma barbería" />
 
 	<!-- Meta Viewport -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -34,24 +34,28 @@
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://www.nicatech.uy/" />
-	<meta property="og:title" content="Agenda y Gestión de Barbería | Nicatech - La única plataforma en Uruguay" />
+	<meta property="og:title" content="Agenda y Gestión de Barbería | Nicatech - Plataforma en Uruguay" />
 	<meta property="og:description"
-		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
-	<meta property="og:image" content="assets/media/banner-seo-meta.jpg" />
+		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 Plataforma única en Uruguay. ¡Empezá gratis!" />
+	<meta property="og:image" content="https://nicatech.uy/assets/media/banner-seo-meta.jpg" />
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image" />
 	<meta property="twitter:url" content="https://www.nicatech.uy/" />
-	<meta property="twitter:title" content="Agenda y Gestión de Barbería | Nicatech - La única plataforma en Uruguay" />
+	<meta property="twitter:title" content="Agenda y Gestión de Barbería | Nicatech - Plataforma en Uruguay" />
 	<meta property="twitter:description"
-		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!" />
-	<meta property="twitter:image" content="assets/media/banner-seo-meta.jpg" />
+		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 Plataforma única en Uruguay. ¡Empezá gratis!" />
+	<meta property="twitter:image" content="https://nicatech.uy/assets/media/banner-seo-meta.jpg" />
 
 	<!-- Canonical -->
 	<link rel="canonical" href="https://nicatech.uy/" />
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="assets/media/logos/logo-simbolo.png" />
+
+	<!-- Preconnect for performance -->
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://www.googletagmanager.com" />
 
 	<!-- Fuentes y Estilos -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
@@ -66,7 +70,7 @@
             "name": "Nicatech",
             "url": "https://nicatech.uy",
             "logo": "https://nicatech.uy/assets/media/logos/nicatech-logo.png",
-            "description": "📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 La única plataforma en Uruguay. ¡Empezá gratis!",
+            "description": "📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 Plataforma única en Uruguay. ¡Empezá gratis!",
             "address": {
               "@type": "PostalAddress",
               "addressCountry": "UY",
@@ -87,13 +91,6 @@
         }
     </script>
 
-	<!-- Protección contra iframe -->
-	<script>
-		if (window.top != window.self) {
-			window.top.location.replace(window.self.location.href);
-		}
-	</script>
-
 	<!-- Meta Author -->
 	<meta name="author" content="Nicatech" />
 
@@ -107,12 +104,6 @@
 	<meta http-equiv="Content-Language" content="es" />
 
 	<!-- Additional SEO Meta Tags -->
-	<meta name="rating" content="general" />
-	<meta name="distribution" content="global" />
-	<meta name="revisit-after" content="7 days" />
-	<meta name="expires" content="never" />
-	<meta name="coverage" content="worldwide" />
-	<meta name="target" content="all" />
 	<meta name="HandheldFriendly" content="true" />
 	<meta name="MobileOptimized" content="320" />
 	<meta name="format-detection" content="telephone=no" />
