--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 
 	<!-- Meta Keywords -->
 	<meta name="keywords"
-		content="Nicatech, software de barbería, gestión barbería, agenda digital, clientes, citas, servicios, Uruguay, plataforma barbería" />
+		content="Nicatech, software de barbería, gestión barbería, agenda digital, clientes, citas, servicios, Uruguay, plataforma barbería, administración barbería, software para peluquerías" />
 
-	<!-- Meta Viewport -->
+	<!-- Meta Viewport (Optimizado para responsive) -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
 	<!-- Meta Robots -->
 	<meta name="robots" content="index, follow" />
 
-	<!-- Open Graph / Facebook -->
+	<!-- Open Graph / Facebook (URL de imagen completa) -->
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://www.nicatech.uy/" />
 	<meta property="og:title" content="Agenda y Gestión de Barbería | Nicatech - Plataforma en Uruguay" />
@@ -47,29 +47,32 @@
 		content="📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 Plataforma única en Uruguay. ¡Empezá gratis!" />
 	<meta property="twitter:image" content="https://nicatech.uy/assets/media/banner-seo-meta.jpg" />
 
-	<!-- Canonical -->
+	<!-- Canonical (Verificado) -->
 	<link rel="canonical" href="https://nicatech.uy/" />
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="assets/media/logos/logo-simbolo.png" />
 
-	<!-- Preconnect for performance -->
+	<!-- Preconnect for performance (Mejora de velocidad de carga) -->
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://www.googletagmanager.com" />
+	<link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+	<link rel="dns-prefetch" href="https://www.googletagmanager.com" />
 
 	<!-- Fuentes y Estilos -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
 	<link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
 	<link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
 
-	<!-- JSON-LD Schema -->
+	<!-- JSON-LD Schema (Mejorado con datos locales adicionales) -->
 	<script type="application/ld+json">
         {
             "@context": "https://schema.org",
-            "@type": "Organization",
+            "@type": "LocalBusiness",
             "name": "Nicatech",
             "url": "https://nicatech.uy",
             "logo": "https://nicatech.uy/assets/media/logos/nicatech-logo.png",
+            "image": "https://nicatech.uy/assets/media/logos/nicatech-logo.png",
             "description": "📅 Agenda online y gestión de tu barbería. 💻 Clientes, citas y servicios en un solo lugar. 🚀 Plataforma única en Uruguay. ¡Empezá gratis!",
             "address": {
               "@type": "PostalAddress",
@@ -84,6 +87,8 @@
               "email": "info@nicatech.uy",
               "telephone": "+598 94 306 272"
             },
+            "priceRange": "$$",
+            "openingHours": "Mo-Fr 09:00-18:00",
             "sameAs": [
               "https://www.facebook.com/nicatech",
               "https://www.instagram.com/nicatech"
@@ -103,7 +108,7 @@
 	<!-- Meta Language -->
 	<meta http-equiv="Content-Language" content="es" />
 
-	<!-- Additional SEO Meta Tags -->
+	<!-- Additional SEO Meta Tags (Obsoletos eliminados) -->
 	<meta name="HandheldFriendly" content="true" />
 	<meta name="MobileOptimized" content="320" />
 	<meta name="format-detection" content="telephone=no" />
